tests/expectations/compiler/core/algorithms/integers/pedersen128/pedersen128_hash_to_u128.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:26:23
     |
  26 |         let a: u128 = Pedersen128::hash_to_u128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:27:23
     |
  27 |         let b: u128 = Pedersen128::hash_to_u128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:23
     |
  28 |         let c: u128 = Pedersen128::hash_to_u128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:23
     |
  29 |         let d: u128 = Pedersen128::hash_to_u128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:23
     |
  30 |         let e: u128 = Pedersen128::hash_to_u128(i8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:23
     |
  31 |         let f: u128 = Pedersen128::hash_to_u128(i16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:23
     |
  32 |         let g: u128 = Pedersen128::hash_to_u128(i32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:23
     |
  33 |         let h: u128 = Pedersen128::hash_to_u128(i64_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:23
     |
  34 |         let j: u128 = Pedersen128::hash_to_u128(u8_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:23
     |
  35 |         let k: u128 = Pedersen128::hash_to_u128(u16_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:23
     |
  36 |         let l: u128 = Pedersen128::hash_to_u128(u32_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:23
     |
  37 |         let m: u128 = Pedersen128::hash_to_u128(u64_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:23
     |
  38 |         let o: u128 = Pedersen128::hash_to_u128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:23
     |
  40 |         let q: u128 = Pedersen128::hash_to_u128(bool_value);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
